add exception and fix validation